# flex

./: .gitignore  configure.ac
lib/: Makefile.am
m4/: .gitignore
src/: Makefile.am  flex.skl
